# krakel

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml
.docker/: Dockerfile  ros_entrypoint.sh
krakel_demos/: CMakeLists.txt  package.xml
krakel_demos/launch/: constrained_planning_demo.launch.py
krakel_demos/src/: constrained_planning_demo.cpp
